force-app/main/default/objects/CBK_Margen_Facturacion__c/CBK_Margen_Facturacion__c.object-meta.xml
<CustomObject>
    <label>Margen Facturación</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Margen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Márgenes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>