force-app/main/default/objects/CBK_Margen_Facturacion__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <formula>IF(
(NOT(ISBLANK(CC_Fecha_Fin__c)) &amp;&amp; TODAY() &gt;= CC_Fecha_Inicio__c &amp;&amp; TODAY() &lt; CC_Fecha_Fin__c ) ||  
(ISBLANK( CC_Fecha_Fin__c ) &amp;&amp; TODAY() &gt;= CC_Fecha_Inicio__c ),
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>