force-app/main/default/objects/CBK_Margen_Facturacion__c/fields/CC_Area_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CC_Area_de_Negocio__c</fullName>
    <label>Área de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Area_Negocio</valueSetName>
    </valueSet>
</CustomField>