force-app/main/default/objects/CBK_Margen_Facturacion__c/fields/CC_Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Fin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Fin Vigencia</label>
    <type>Date</type>
</CustomField>