force-app/main/default/objects/CBK_Margen_Facturacion__c/fields/CC_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Inicio Vigencia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>