force-app/main/default/objects/CBK_Margen_Facturacion__c/fields/CC_Margen__c.field-meta.xml
<CustomField>
    <fullName>CC_Margen__c</fullName>
    <label>% Margen</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>