force-app/main/default/objects/CBK_Margen_Facturacion__c/recordTypes/CC_Margen_Facturacion.recordType-meta.xml
<RecordType>
    <fullName>CC_Margen_Facturacion</fullName>
    <active>true</active>
    <label>Margen Facturacion</label>
</RecordType>