force-app/main/default/objects/CBK_Margen_Facturacion__c/validationRules/CC_Margen_Negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Margen_Negativo</fullName>
    <active>false</active>
    <errorConditionFormula>CC_Margen__c &lt;= 0</errorConditionFormula>
    <errorMessage>El margen no puede ser negativo ni nulo</errorMessage>
</ValidationRule>