force-app/main/default/objects/CBK_Margen_Facturacion__c/listViews/ATENCI_N_AL_CLIENTE.listView-meta.xml
<ListView>
    <fullName>ATENCI_N_AL_CLIENTE</fullName>
    <columns>NAME</columns>
    <columns>CC_Margen__c</columns>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>CC_Fecha_Fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>ATENCIÓN AL CLIENTE</label>
</ListView>