force-app/main/default/objects/CBK_Margen_Facturacion__c/listViews/TARJETAS_M2P.listView-meta.xml
<ListView>
    <fullName>TARJETAS_M2P</fullName>
    <columns>NAME</columns>
    <columns>CC_Margen__c</columns>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>CC_Fecha_Fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>TARJETAS M2P</label>
</ListView>