force-app/main/default/objects/CBK_Margen_Facturacion__c/listViews/WIVAI.listView-meta.xml
<ListView>
    <fullName>WIVAI</fullName>
    <columns>NAME</columns>
    <columns>CC_Margen__c</columns>
    <columns>CC_Fecha_Inicio__c</columns>
    <columns>CC_Fecha_Fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>WIVAI</label>
</ListView>